# policies_translation

./: Cargo.toml
data/: policies.txt
output/: policies_ALFA.txt  policies_ALFA_ChatGPT.txt  policies_ALFA_Mistral.txt  policies_alfa.txt  policies_json.txt  policies_json_test.txt
src/: main.rs  parse_input_text.rs  policy.rs
src/policy_extraction/: extract_policies.rs  mod.rs  parse_input_text.rs  parse_policy_json.rs  policy.rs
src/policy_translation/: mod.rs  translate_policies.rs
src/policy_translation/model_choice/: mod.rs  translation_chatgpt.rs  translation_gemini.rs  translation_mistral.rs
src/policy_translation/policy_language_choice/: choose_policy_language.rs  mod.rs
