[package]
name = "policies_translation"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"]}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tokio = { version = "1", features = ["full"] }
futures = "0.3"